hot fix z-index sub menu items

--- a/src/components/hookComponents/header/header.scss
+++ b/src/components/hookComponents/header/header.scss
@@ -142,6 +142,7 @@
         display: none;
         position: absolute;
         top: 100%;
+        z-index: 10;
       }
 
       &:last-of-type {
